--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,10 @@ title: metiy.xyz
 description: 快速导航页
 url: https://metiy.xyz
 baseurl: "/"
-theme: dinky 
+
 markdown: kramdown
+
+remote_theme: pages-themes/dinky@v0.2.0
+
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
