--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "/"
 
 markdown: kramdown
 
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
